--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@
 ext {
     recyclerViewVersion = "1.2.0-beta01";
     fragment_version = "1.3.0"
-    nav_version = "2.3.3"
 }
 
 buildscript {
     ext.kotlin_version = "1.4.21"
+    ext.nav_version = "2.3.3"
     repositories {
         google()
         jcenter()
@@ -14,6 +14,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
