--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 ext {
     recyclerViewVersion = "1.2.0-beta01";
     fragment_version = "1.3.0"
+    glide_version = "4.9.0"
 }
 
 buildscript {
@@ -9,6 +10,7 @@ buildscript {
     ext.nav_version = "2.3.3"
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -24,6 +26,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 }
