--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
 
         <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".DetailActivity"></activity>
         <activity android:name=".ResultsActivity"></activity>
     </application>
 
