--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -45,6 +46,11 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$rootProject.glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$rootProject.glide_version"
     implementation 'com.google.android:flexbox:0.3.0-alpha3'
+
+    //implementation "org.jsoup:jsoup:$rootProject.jsoup_version"
+    implementation ("io.karn:khttp-android:0.1.2")
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.21"
+    implementation 'com.android.support:multidex:1.0.3'
 
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
