--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 ext {
-    recyclerViewVersion = "1.2.0-beta01";
+    recyclerViewVersion = "1.2.0-beta02";
     fragment_version = "1.3.0"
     glide_version = "4.9.0"
+    jsoup_version = "1.11.2"
 }
 
 buildscript {
@@ -28,6 +29,8 @@ allprojects {
         google()
         mavenCentral()
         jcenter()
+        maven { url 'https://jitpack.io' }
+        //jcenter { url "https://jcenter.bintray.com" }
     }
 }
 
