Added working posts and about buttons in SearchActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".SearchActivity"></activity>
         <activity android:name=".DetailActivity"></activity>
         <activity android:name=".ResultsActivity"></activity>
+        <activity android:name=".AboutActivity"></activity>
     </application>
 
 </manifest>
