--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 
     implementation "com.github.bumptech.glide:glide:$rootProject.glide_version"
     annotationProcessor "com.github.bumptech.glide:compiler:$rootProject.glide_version"
-    implementation 'com.google.android:flexbox:0.3.0-alpha3'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
     implementation "org.jsoup:jsoup:$rootProject.jsoup_version"
     implementation "io.karn:khttp-android:0.1.2"
